[gd_scene load_steps=11 format=2]

[ext_resource path="res://TaskManager/Flat-it - BioSans-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://TaskManager/TMFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TaskManager/Task/StartStopButton.gd" type="Script" id=3]
[ext_resource path="res://TaskManager/Task/Task.gd" type="Script" id=4]
[ext_resource path="res://TaskManager/OutlineOnlyStylebox.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.878431, 0.878431, 0.878431, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 18
outline_color = Color( 0.25098, 0.25098, 0.266667, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Task" type="PanelContainer"]
margin_right = 339.0
margin_bottom = 111.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 319.0
margin_bottom = 91.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 299.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -586.035, -177.294 )
custom_constants/separation = 20

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 170.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "task name"
autowrap = true
uppercase = true

[node name="StartStopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 299.0
margin_bottom = 44.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "START"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/StartStopButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.988235, 0.611765, 0.611765, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 299.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
text = "00:00:00 - 00:00:00"
uppercase = true

[connection signal="completed" from="VBoxContainer/HBoxContainer/StartStopButton" to="." method="_on_StartStopButton_completed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/StartStopButton" to="VBoxContainer/HBoxContainer/StartStopButton" method="_on_StartStopButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/StartStopButton" to="VBoxContainer/HBoxContainer/StartStopButton" method="_on_StartStopButton_mouse_exited"]
[connection signal="started" from="VBoxContainer/HBoxContainer/StartStopButton" to="." method="_on_StartStopButton_started"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/StartStopButton" to="VBoxContainer/HBoxContainer/StartStopButton" method="_on_StartStopButton_toggled"]
